aap-13268-eda updated

--- a/downstream/modules/eda/proc-modifying-memory-during-install.adoc
+++ b/downstream/modules/eda/proc-modifying-memory-during-install.adoc
@@ -3,7 +3,7 @@
 = Modifying the default memory limit for each rulebook activation during installation
 
 [role="_abstract"]
-By default, each rulebook activation container has a 200mb memory limit. You can modify this default value during installation by using the following procedure: .
+By default, each rulebook activation container has a 200mb memory limit. You can modify this default value during installation by using the following procedure:
 
 .Procedure
 . Navigate to the setup inventory file.
