Revising content of Controller Guides
Further corrections

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -91,8 +91,8 @@
 :MeshConnect: automation mesh connector
 :MeshReceptor: automation mesh receptor
 :ControllerGS: Getting started with automation controller
-:ControllerUG: Automation controller User Guide
-:ControllerAG: Automation controller Administration Guide
+:ControllerUG: Using automation execution
+:ControllerAG: Configuring automation execution
 :Analytics: Automation Analytics
 
 
