--- a/downstream/modules/platform/con-controller-settings.adoc
+++ b/downstream/modules/platform/con-controller-settings.adoc
@@ -5,7 +5,7 @@
 You can configure some {ControllerName} options using the *Settings* menu of the User Interface. 		
 
 
-The *Settings* page enables administrators to configure the following:
+The *Settings* page enables an administrator to configure the following:
 
 * Subscriptions TBD
 * System TBD
