Revising content of Controller Guides
Change from dev information

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/modules/platform/proc-controller-create-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-job-template.adoc
@@ -36,7 +36,7 @@ A System Administrator must grant you or your team permissions to be able to use
 
 Inventory prompts show up as its own step in a later prompt window.
 | Project | Select the project to use with this job template from the projects available to the user that is logged in. | N/A
-| SCM branch | This field is only present if you chose a project that allows branch override.
+| Source control branch | This field is only present if you chose a project that allows branch override.
 Specify the overriding branch to use in your job run.
 If left blank, the specified SCM branch (or commit hash or tag) from the project is used.
 
