--- a/downstream/modules/eda/con-system-level-monitoring.adoc
+++ b/downstream/modules/eda/con-system-level-monitoring.adoc
@@ -3,7 +3,8 @@
 =  System level monitoring for {EDAcontroller}
 
 [role="_abstract"]
-After characterizing your workload to determine how many rulebook activations you are running in parallel and how many events you are receiving at any given point, you must consider monitoring your {EDAcontroller}  host at the system level. Using system level monitoring to review information about {EDAName}’s performance over time helps when diagnosing problems or when capacity planning for future growth.
+After characterizing your workload to determine how many rulebook activations you are running in parallel and how many events you are receiving at any given point, you must consider monitoring your {EDAcontroller}  host at the system level.
+Using system level monitoring to review information about {EDAName}’s performance over time helps when diagnosing problems or when considering capacity for future growth.
 
 System level monitoring includes the following information:
 
@@ -12,4 +13,6 @@ System level monitoring includes the following information:
 * CPU utilization
 * Network traffic 
 
-Higher CPU, RAM, or Disk utilization can affect the overall performance of {EDAcontroller}. For example, a high utilization of any of these system level resources indicates that either the {EDAcontroller} is running too many rulebook activations, or some of the individual rulebook activations are using a high volume of resources. In this case, it is necessary to increase your system level resources in order to support your workload.
+Higher CPU, RAM, or Disk utilization can affect the overall performance of {EDAcontroller}.
+For example, a high utilization of any of these system level resources indicates that either the {EDAcontroller} is running too many rulebook activations, or some of the individual rulebook activations are using a high volume of resources.
+In this case, you must increase your system level resources to support your workload.
