--- a/downstream/modules/eda/proc-modifying-activations-after-install.adoc
+++ b/downstream/modules/eda/proc-modifying-activations-after-install.adoc
@@ -7,6 +7,7 @@ By default, {EDAcontroller} allows 12 activations to run simultaneously. You can
 
 .Procedure
 . Navigate to the environment file at `/etc/ansible-automation-platform/eda`.
-. Choose the number of maximum running activations that you need. For example, `EDA_MAX_RUNNING_ACTIVATIONS = 16`
+. Choose the number of maximum running activations that you need.
+For example, `EDA_MAX_RUNNING_ACTIVATIONS = 16`
 . Use the following command to restart EDA services: `systemctl restart automation-eda-controller.target`
 
