--- a/downstream/modules/eda/proc-modifying-memory-after-install.adoc
+++ b/downstream/modules/eda/proc-modifying-memory-after-install.adoc
@@ -3,9 +3,11 @@
 = Modifying the default memory limit for each rulebook activation after installation
 
 [role="_abstract"]
-By default, each rulebook activation container has a 200mb memory limit. You can modify this default value after installation by using the following procedure:
+By default, each rulebook activation container has a 200MB memory limit.
+You can modify this default value after installation by using the following procedure:
 
 .Procedure
 . Navigate to the environment file at `/etc/ansible-automation-platform/eda`.
-. Modify the default container memory limit. For example, `EDA_PODMAN_MEM_LIMIT = '300m'`.
+. Modify the default container memory limit.
+For example, `EDA_PODMAN_MEM_LIMIT = '300m'`.
 . Restart the {EDAcontroller} services using `systemctl restart automation-eda-controller.target`.
