--- a/downstream/modules/eda/proc-modifying-memory-during-install.adoc
+++ b/downstream/modules/eda/proc-modifying-memory-during-install.adoc
@@ -3,9 +3,11 @@
 = Modifying the default memory limit for each rulebook activation during installation
 
 [role="_abstract"]
-By default, each rulebook activation container has a 200mb memory limit. You can modify this default value during installation by using the following procedure:
+By default, each rulebook activation container has a 200MB memory limit.
+You can modify this default value during installation by using the following procedure:
 
 .Procedure
 . Navigate to the setup inventory file.
-. Add `automationedacontroller_podman_mem_limit` under [all:vars] section. For example, `automationedacontroller_podman_mem_limit='400m'`. 
+. Add `automationedacontroller_podman_mem_limit` in the [all:vars] section.
+For example, `automationedacontroller_podman_mem_limit='400m'`. 
 . Run the setup.
