aap-13268-eda updated following peer review II

--- a/downstream/assemblies/eda/assembly-eda-performance-tuning.adoc
+++ b/downstream/assemblies/eda/assembly-eda-performance-tuning.adoc
@@ -2,7 +2,9 @@
 
 = Performance tuning for {EDAcontroller}
 
-{EDAName} is a highly scalable, flexible automation capability. {EDAcontroller} provides the interface in which {EDAName} automation performs. Tune your {EDAcontroller} to optimize performance and scalability through: 
+{EDAName} is a highly scalable, flexible automation capability.
+{EDAcontroller} provides the interface in which {EDAName} automation performs.
+Tune your {EDAcontroller} to optimize performance and scalability through: 
 
 * Characterizing your workload
 * System level monitoring 
