--- a/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
+++ b/downstream/modules/eda/con-modifying-simultaneous-activations.adoc
@@ -3,7 +3,10 @@
 = Modifying the number of simultaneous rulebook activations 
 
 [role="_abstract"]
-By default, {EDAcontroller} allows 12 rulebook activations to run simultaneously. If any more than 12 rulebook activations are created, the expected behavior is that subsequent rulebook activations wait in pending until there is an available rulebook activation worker. In this case, the rulebook activation status will display as “pending” even if there is enough free memory and CPU on your {EDAcontroller} instance. To change this behavior, you must change the default maximum number of running rulebook activations.
+By default, {EDAcontroller} allows 12 rulebook activations to run simultaneously.
+If any more than 12 rulebook activations are created, the expected behavior is that subsequent rulebook activations wait in pending until there is an available rulebook activation worker.
+In this case, the rulebook activation status will display as “pending” even if there is enough free memory and CPU on your {EDAcontroller} instance.
+To change this behavior, you must change the default maximum number of running rulebook activations.
 
 **Note:** The value for `EDA_MAX_RUNNING_ACTIVATIONS` doesn’t change with the change in instance size, so it needs to be adjusted manually.
 
