--- a/downstream/modules/eda/proc-modifying-activations-after-install.adoc
+++ b/downstream/modules/eda/proc-modifying-activations-after-install.adoc
@@ -3,7 +3,8 @@
 = Modifying the number of simultaneous rulebook activations after {EDAcontroller} installation
 
 [role="_abstract"]
-By default, {EDAcontroller} allows 12 activations to run simultaneously. You can modify this default value after installation by using the following procedure:
+By default, {EDAcontroller} allows 12 activations to run simultaneously.
+You can modify this default value after installation by using the following procedure:
 
 .Procedure
 . Navigate to the environment file at `/etc/ansible-automation-platform/eda`.
