--- a/downstream/modules/eda/proc-modifying-activations-during-install.adoc
+++ b/downstream/modules/eda/proc-modifying-activations-during-install.adoc
@@ -3,7 +3,8 @@
 = Modifying the number of simultaneous rulebook activations during {EDAcontroller} installation 
 
 [role="_abstract"]
-By default, {EDAcontroller} allows 12 activations to run simultaneously. You can modify this default value during installation by using the following procedure:
+By default, {EDAcontroller} allows 12 activations to run simultaneously.
+You can modify this default value during installation by using the following procedure:
 
 .Procedure
 Provide a variable to the VM installer:
@@ -11,5 +12,4 @@ Provide a variable to the VM installer:
 . Navigate to the setup inventory file. 
 . Add `automationedacontroller_max_running_activations` in the [all:vars] section.
 For example, `automationedacontroller_max_running_activations=16`.
-
-Run the setup
+. Run the setup.
