--- a/downstream/modules/eda/ref-performance-troubleshooting.adoc
+++ b/downstream/modules/eda/ref-performance-troubleshooting.adoc
@@ -3,7 +3,8 @@
 =  Performance Troubleshooting for {EDAcontroller}
 
 [role="_abstract"]
-Based on the default parameters within {EDAcontroller}, you might encounter scenarios that pose challenges to completing your workload. The following section provides descriptions of these scenarios and troubleshooting guidance.
+Based on the default parameters within {EDAcontroller}, you might encounter scenarios that pose challenges to completing your workload.
+The following section provides descriptions of these scenarios and troubleshooting guidance.
 
 * My activation status displays as “running”, but it is not processing the events.
 ** Ensure that you are using the correct event source in the rulebook activation.
