Revising content of Controller Guides
Additional chages, security chapter partitioned

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/assemblies/platform/assembly-controller-security.adoc
+++ b/downstream/assemblies/platform/assembly-controller-security.adoc
@@ -11,8 +11,10 @@ This protection ensures that jobs can only access playbooks, roles, and data fro
 For credential security, you can upload locked SSH keys and set the unlock password to "ask". 
 You can also have the system prompt you for SSH credentials or sudo passwords rather than having the system store them in the database.
 
+//Moved to jobs
 include::platform/con-controller-playbook-access-info-sharing.adoc[leveloffset=+1]
 include::platform/ref-controller-isolation-functionality.adoc[leveloffset=+2]
+
 include::platform/con-controller-rbac.adoc[leveloffset=+1]
 include::platform/con-controller-role-hierarchy.adoc[leveloffset=+2]
 include::platform/ref-controller-applying-rbac.adoc[leveloffset=+3]
@@ -25,6 +27,5 @@ include::platform/ref-controller-rbac-user-view.adoc[leveloffset=+4]
 include::platform/ref-controller-rbac-roles.adoc[leveloffset=+3]
 include::platform/ref-controller-rbac-built-in-roles.adoc[leveloffset=+4]
 include::platform/ref-controller-rbac-personas.adoc[levelffset=+3]
-
 include::platform/con-controller-function-of-roles.adoc[leveloffset=+1]
 
