--- a/downstream/modules/platform/proc-controller-create-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-job-template.adoc
@@ -153,7 +153,9 @@ GitHub and GitLab are the supported SCM systems.
 ** *Webhook key*: Generated shared secret to be used by the webhook service to sign payloads sent to {ControllerName}.
 You must configure this in the settings on the webhook service in order for {ControllerName} to accept webhooks from this service.
 ** *Webhook credential*: Optionally, give a GitHub or GitLab personal access token (PAT) as a credential to use to send status updates back to the webhook service.
++
 Before you can select it, the credential must exist.
++
 See TBD[Credential Types] to create one.
 ** For additional information about setting up webhooks, see xref:controller-work-with-webhooks[Working with Webhooks].
 * *Concurrent jobs*: If checked, you are allowing jobs in the queue to run simultaneously if not dependent on one another. Check this box if you want to run job slices simultaneously. For more information, see xref:controller-capacity-determination[{ControllerNameStart} capacity determination and job impact].
@@ -172,4 +174,4 @@ You must first save the template before launching, otherwise, btn:[Launch templa
 .Verification
 
 . From the navigation panel, select {MenuAETemplates}.
-. Verify that the newly created template appears on the *Templates* list view.
+. Verify that the newly created template appears on the *Templates* page.
