--- a/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
@@ -35,8 +35,11 @@ include::platform/con-controller-scm-inventory-jobs.adoc[leveloffset=+1]
 include::platform/ref-controller-scm-inventory-details.adoc[leveloffset=+2]
 include::platform/con-controller-playbook-run-jobs.adoc[leveloffset=+1]
 include::platform/ref-controller-playbook-run-search.adoc[leveloffset=+2]
-include::platform/ref-controller-host-details.adoc[leveloffset=+2]
+//Commenting this out until I know what it's talking about.
+//include::platform/ref-controller-host-details.adoc[leveloffset=+2]
 include::platform/ref-controller-playbook-run-details.adoc[leveloffset=+2]
+include::platform/con-controller-playbook-access-info-sharing.adoc[leveloffset=+2]
+include::platform/ref-controller-isolation-functionality.adoc[leveloffset=+2]
 include::platform/con-controller-capacity-determination.adoc[leveloffset=+1]
 include::platform/con-controller-resource-determination-capacity.adoc[leveloffset=+2]
 include::platform/ref-controller-memory-relative-capacity.adoc[leveloffset=+3]
