--- a/downstream/modules/platform/proc-controller-run-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-run-job-template.adoc
@@ -14,7 +14,7 @@ image::controller-gs-job-templates-launch.png[Launch template]
 
 The initial job start generates a status page, which updates automatically by using {ControllerName}'s Live Event feature, until the job is complete.
 
-For more information about the job results, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-jobs[Jobs in automation controller] in the _{ControllerUG}_.
+For more information about the job results, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#controller-jobs[Jobs in automation controller] in _{ControllerUG}_.
 
 .Additional resources
 
