--- a/downstream/titles/controller/controller-admin-guide/master.adoc
+++ b/downstream/titles/controller/controller-admin-guide/master.adoc
@@ -18,6 +18,8 @@ include::{Boilerplate}[]
 
 //include::platform/assembly-controller-licensing.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-start-stop-controller.adoc[leveloffset=+1]
+//Uses Settings menu. Which may be separate documentation.
+include::platform/assembly-ag-controller-config.adoc[leveloffset=+1]
 //Deprecated
 //include::platform/assembly-custom-inventory-scripts.adoc[leveloffset=+1]
 include::platform/assembly-inventory-file-importing.adoc[leveloffset=+1]
@@ -37,9 +39,8 @@ include::platform/assembly-controller-improving-performance.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-secret-handling.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-security-best-practices.adoc[leveloffset=+1]
 include::platform/assembly-controller-awx-manage-utility.adoc[leveloffset=+1]
-//Uses Settings menu. Which may be separate documentation.
-include::platform/assembly-ag-controller-config.adoc[leveloffset=+1]
-include::platform/assembly-controller-isolation-function-variables.adoc[leveloffset=+1]
+//Duplicate of content in security and now moved to jobs
+//include::platform/assembly-controller-isolation-function-variables.adoc[leveloffset=+1]
 //Donna's work
 //include::platform/assembly-controller-token-based-authentication.adoc[leveloffset=+1]
 //include::platform/assembly-controller-set-up-social-authentication.adoc[leveloffset=+1]
