--- a/downstream/modules/platform/con-controller-custom-dynamic-inv-scripts.adoc
+++ b/downstream/modules/platform/con-controller-custom-dynamic-inv-scripts.adoc
@@ -19,4 +19,5 @@ The credential type must specify all the necessary types of inputs.
 Then, when you create a credential of this type, the secrets are stored in an encrypted form. 
 If you apply that credential to the inventory source, the script has access to those inputs.
 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#assembly-controller-custom-credentials[Custom Credential Types] in the {ControllerUG}.
+TBD
+//For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#assembly-controller-custom-credentials[Custom Credential Types] in _{ControllerUG}_.
