--- a/downstream/modules/platform/proc-controller-add-groups-hosts.adoc
+++ b/downstream/modules/platform/proc-controller-add-groups-hosts.adoc
@@ -4,7 +4,7 @@
 
 Groups are only applicable to standard inventories and are not configurable directly through a Smart Inventory.
 You can associate an existing group through hosts that are used with standard inventories.
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-add-groups[Adding groups to inventories] in the _{ControllerUG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_user_guide/index#proc-controller-add-groups[Adding groups to inventories] in _{ControllerUG}_.
 
 .Procedure
 //[ddacosta] Need to verify this is the correct flow. The original content identified menus that don't exist.
