--- a/downstream/modules/platform/ref-controller-existing-security.adoc
+++ b/downstream/modules/platform/ref-controller-existing-security.adoc
@@ -7,4 +7,4 @@ Use {ControllerName}'s role-based access control (RBAC) to delegate the minimum 
 Use teams in {ControllerName} to assign permissions to groups of users rather than to users individually. 
 
 .Additional resources
-For more information, see link:https://docs.ansible.com/automation-controller/4.4/html/userguide/security.html#rbac-ug[Role-Based Access Controls] in the _{ControllerUG}_.
+For more information, see link:https://docs.ansible.com/automation-controller/4.4/html/userguide/security.html#rbac-ug[Role-Based Access Controls] in _{ControllerUG}_.
