--- a/downstream/modules/platform/con-controller-resources.adoc
+++ b/downstream/modules/platform/con-controller-resources.adoc
@@ -5,7 +5,7 @@
 The *Resources* menu provides access to the following components of {ControllerName}:
 
 * Templates
-//* xref:controller-credentials[Credentials]
+* TBD[Credentials]
 * xref:controller-projects[Projects]
 * xref:controller-inventories[Inventories]
 * Hosts
