Update Configuring Controller Chapter
Corrections

Update Controller Configuration chapter of CAG from Settings document

https://issues.redhat.com/browse/AAP-25711

--- a/downstream/modules/platform/proc-controller-configure-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-analytics.adoc
@@ -2,18 +2,18 @@
 
 = Configure {Analytics}
 
-The *Subcriptions* page and the *System settings page* of the Settings menu enable you to configure  {Analytics}.
+Configure {Analytics} on the *Subcriptions* page and the *System settings page* of the Settings menu.
 
 .Procedure
-. From the navigation panel, select {MenuSetSubscription}/
-. The Subscription page is displayed.
+. From the navigation panel, select {MenuSetSubscription}.
+The Subscription page is displayed.
 . If you have not already set up a subscription, do so now, and ensure that on the next page you have selected *{Analytics}* to use analytics data to enhance future releases of {PlatformNameShort} and to provide the Red Hat insights service to subscribers..
 +
 image::automation_analytics.png[Automation analytics page]
 
 . From the navigation panel, select {MenuSetSystem}.
-. Click btn:[Edit]
-. On the System settings page, select *Gather data for {Analytics}*.
+. Click btn:[Edit].
+. On the *System settings* page, select *Gather data for {Analytics}*.
 . You can also configure the following options:
 
 * *Red Hat Customer Name*: This username is used to send data to {Analytics}.
