--- a/downstream/modules/platform/proc-controller-configure-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-configure-subscriptions.adoc
@@ -2,14 +2,14 @@
 
 = Configuring subscriptions
 
-You can use the Subscriptions menu to view the details of your subscription, such as compliance, host-related statistics, or expiry, or you can apply a new subscription.
+You can use the *Subscriptions* menu to view the details of your subscription, such as compliance, host-related statistics, or expiry, or you can apply a new subscription.
 
 .Procedure
 . From the navigation panel, select {MenuSetSubscription}.
-. The *Subscription* page is displayed.
+The *Subscription* page is displayed.
 +
 image::settings_subscription_page.png[Initial subscriptions page]
-. Click btn:[Edit subscription]
+. Click btn:[Edit subscription].
 . The *Welcome* page is displayed.
 +
 image::subscriptions_first-page.png[Suscriptions page for password or manifest]
