--- a/downstream/modules/platform/proc-controller-configure-system.adoc
+++ b/downstream/modules/platform/proc-controller-configure-system.adoc
@@ -2,7 +2,7 @@
 
 = Configuring system settings
 
-You can use the System menu to define automation controller system settings.
+You can use the *System* menu to define automation controller system settings.
 
 .Procedure
 
