--- a/downstream/modules/platform/ref-controller-logging-settings.adoc
+++ b/downstream/modules/platform/ref-controller-logging-settings.adoc
@@ -1,6 +1,6 @@
 [id="ref-controller-logging-settings"]
 
-= Logging and agregation settings
+= Logging and aggregation settings
 
 
-For information about these settings, see xref:proc-controller-set-up-logging[Setting up logging]
+For information about these settings, see xref:proc-controller-set-up-logging[Setting up logging].
