--- a/downstream/modules/platform/proc-settings-user-preferences.adoc
+++ b/downstream/modules/platform/proc-settings-user-preferences.adoc
@@ -8,7 +8,7 @@ You can use the *User preferences* page to customize your platform experience. U
 
 [NOTE]
 ====    
-User preferences are stored locally in your browser. This means that they are unique to that user and that machine.
+User preferences are stored locally in your browser. This means that they are unique to you and your machine.
 ====
 
 .Procedure
