--- a/downstream/modules/platform/proc-custom-logos-images.adoc
+++ b/downstream/modules/platform/proc-custom-logos-images.adoc
@@ -11,7 +11,7 @@ You can add a custom logo by uploading an image and supplying a custom login mes
 .Procedure
 
 . From the navigation panel, select {MenuSetGateway}. 	
-. In the *Custom login info* field, provide a specific information (such as a legal notice or a disclaimer).
+. In the *Custom login info* field, provide specific information (such as a legal notice or a disclaimer).
 . In the *Custom logo* field, provide an image file for setting up a custom logo (must be a data URL with a base64-encoded GIF, PNG, or JPEG image).
 		 	
 .Example
