AAP-25848 Change Azure Active Directory (AD) to Microsoft Entra ID

--- a/stories/topics/con-azure-security.adoc
+++ b/stories/topics/con-azure-security.adoc
@@ -25,6 +25,6 @@ It is accessible to SREs from the kubernetes API and can be reset by the SREs up
 ** Any parts of the {PlatformNameShort} APIs that could leak any sensitive information are only accessible via authenticating as a known {PlatformNameShort} user and require that user to have the right level of authorization to use those APIs.
 In a private deployment, access to the {PlatformNameShort} APIs is only accessible to the customer via the route they choose to connect to the private deployment.
 ** The Kubernetes API is private and only accessible from a private endpoint
-** Workload identity is enabled and it allows Kubernetes applications to access Azure cloud resources securely with Azure AD.
+** Workload identity is enabled and it allows Kubernetes applications to access Azure cloud resources securely with {MSEntraID}.
 * Updates and patching
 ** The Red Hat SREs regularly update the Kubernetes version, underlying node OS, and {PlatformNameShort} version to the latest available stable versions to get the latest features, bug fixes, and security fixes.
