--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -13,6 +13,7 @@
 // AAP on Clouds
 :AAPonAzureName: Red Hat Ansible Automation Platform on Microsoft Azure
 :AAPonAzureNameShort: Ansible Automation Platform on Microsoft Azure
+:MSEntraID: Microsoft Entra ID
 :Azure: Microsoft Azure
 :AWS: Amazon Web Services
 :Market: AWS Marketplace
