--- a/stories/topics/proc-azure-create-service-principal.adoc
+++ b/stories/topics/proc-azure-create-service-principal.adoc
@@ -15,7 +15,7 @@ Your {AAPonAzureNameShort} deployment will be provisioned in the same Subscripti
 -----
 az account set --subscription <your_subscription_id>
 -----
-. Run the following command using the Azure CLI to create a privileged service principal in Azure AD:
+. Run the following command using the Azure CLI to create a privileged service principal in {MSEntraID}:
 +
 -----
 az ad sp create-for-rbac --name ansible --role Contributor
@@ -36,7 +36,7 @@ The output displays the _appID_ and _tenant_ keys for the service principal:
 
 == Maintaining your service principals
 
-Service principal credentials have a limited lifetime that is set in your Azure AD configuration.
+Service principal credentials have a limited lifetime that is set in your {MSEntraID} configuration.
 Track the lifespan of the service principal if you intend to automate against Azure for an extended period of time.
 You can create a new one when needed.
 
