AAP-24694 Added note about rulebook activations shutting down and canceling jobs on controller. (#1385)
* AAP-24694 Added important admonition about rulebook activation behavior

* AAP-24694 Added important admonition about rulebook activation behavior

* Removed sentence about expected behavior from the updated note, per SME

* Moved the important note to the end of the procedure to avoid breaking up continuity of the procedure

* Fixed syntax error with the important admonition

* Added more context to the note about source plugins shutting down

* Added space between sentences

* Changed the admonition from Important to Note

--- a/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rulebook-activation.adoc
@@ -48,7 +48,12 @@ The content would be equivalent to the file passed through the `--vars` flag of 
 
 . Click btn:[Create rulebook activation].
 
-Your rulebook activation is now created and can be managed in the *Rulebook Activations* screen.
+Your rulebook activation is now created and can be managed on the *Rulebook Activations* page.
 
 After saving the new rulebook activation, the rulebook activation's details page is displayed.
-From there or the *Rulebook Activations* list view you can edit or delete it.
+From there or the *Rulebook Activations* list view, you can edit or delete it.
+
+[NOTE]
+====
+Occasionally, when a source plugin shuts down, it causes a rulebook to exit gracefully after a certain amount of time. When a rulebook activation shuts down, any tasks that are waiting to be performed will be canceled, and an info level message will be sent to the activation log. For more information, see link:https://ansible.readthedocs.io/projects/rulebook/en/stable/rulebooks.html#[Rulebooks].
+====
