--- a/downstream/assemblies/platform/assembly-aap-backup.adoc
+++ b/downstream/assemblies/platform/assembly-aap-backup.adoc
@@ -20,6 +20,8 @@ Take a backup regularly in case you want to restore the platform to a previous s
 
 include::platform/proc-aap-controller-backup.adoc[leveloffset=+1]
 
+include::platform/proc-aap-controller-yaml-backup.adoc[leveloffset=+1]
+
 include::platform/proc-aap-hub-backup.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
