--- a/downstream/assemblies/platform/assembly-aap-recovery.adoc
+++ b/downstream/assemblies/platform/assembly-aap-recovery.adoc
@@ -14,6 +14,8 @@ If you lose information on your system or experience issues with an upgrade, you
 
 include::platform/proc-aap-controller-restore.adoc[leveloffset=+1]
 
+include::platform/proc-aap-controller-yaml-restore.adoc[leveloffset=+1]
+
 include::platform/proc-aap-hub-restore.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
