--- a/downstream/modules/platform/proc-aap-controller-restore.adoc
+++ b/downstream/modules/platform/proc-aap-controller-restore.adoc
@@ -7,7 +7,9 @@ Use this procedure to restore a previous controller deployment from an Automatio
 
 [NOTE]
 ====
-The name specified for the new AutomationController custom resource must not match an existing deployment or the recovery process will fail. If the name specified does match an existing deployment, see xref:aap-troubleshoot-backup-recover[Troubleshooting] for steps to resolve the issue.
+The name specified for the new AutomationController custom resource must not match an existing deployment. 
+
+If the backup custom resource being restored is a backup of a currently running AutomationController custom resource the recovery process will fail. See xref:aap-troubleshoot-backup-recover[Troubleshooting] for steps to resolve the issue.
 ====
 
 .Prerequisites
