Update Configuring Controller Chapter
Correction

Update Controller Configuration chapter of CAG from Settings document

https://issues.redhat.com/browse/AAP-25711

--- a/downstream/modules/platform/proc-controller-configure-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-analytics.adoc
@@ -7,7 +7,7 @@ Configure {Analytics} on the *Subcriptions* page and the *System settings page* 
 .Procedure
 . From the navigation panel, select {MenuSetSubscription}.
 The Subscription page is displayed.
-. If you have not already set up a subscription, do so now, and ensure that on the next page you have selected *{Analytics}* to use analytics data to enhance future releases of {PlatformNameShort} and to provide the Red Hat insights service to subscribers..
+. If you have not already set up a subscription, do so now, and ensure that on the next page you have selected *{Analytics}* to use analytics data to enhance future releases of {PlatformNameShort} and to provide the Red Hat insights service to subscribers.
 +
 image::automation_analytics.png[Automation analytics page]
 
