AAP-25848 Add Microsoft Entra ID attribute to downstream docs

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -35,6 +35,7 @@
 :AWS: Amazon Web Services
 :GCP: Google Cloud Platform
 :Azure: Microsoft Azure
+:MSEntraID: Microsoft Entra ID
 
 // Automation Mesh
 :AutomationMesh: automation mesh
