added a second step to verification modules about satellite login/manifest

--- a/downstream/modules/platform/proc-verify-controller-installation.adoc
+++ b/downstream/modules/platform/proc-verify-controller-installation.adoc
@@ -10,6 +10,7 @@ Verify that you installed {ControllerName} successfully by logging in with the a
 
 .Procedure
 . Go to the IP address specified for the {ControllerName} node in the `inventory` file.
+. Enter your Red Hat Satellite credentials. If this is your first time logging in after installation, upload your `manifest` file.
 . Log in with the user ID `admin` and the password credentials you set in the `inventory` file.
 
 [NOTE]
