--- a/downstream/modules/platform/proc-verify-eda-controller-installation.adoc
+++ b/downstream/modules/platform/proc-verify-eda-controller-installation.adoc
@@ -10,6 +10,8 @@ Verify that you installed {EDAcontroller} successfully by logging in with the ad
 
 . Navigate to the IP address specified for the {EDAcontroller} node in the `inventory` file.
 
+. Enter your Red Hat Satellite credentials. If this is your first time logging in after installation, upload your `manifest` file.
+
 . Log in with the user ID `admin` and the password credentials you set in the `inventory` file.
 
 [IMPORTANT]
