--- a/downstream/modules/platform/proc-verify-hub-installation.adoc
+++ b/downstream/modules/platform/proc-verify-hub-installation.adoc
@@ -7,6 +7,7 @@ Verify that you installed your {HubName} successfully by logging in with the adm
 
 .Procedure
 . Navigate to the IP address specified for the {HubName} node in the `inventory` file.
+. Enter your Red Hat Satellite credentials. If this is your first time logging in after installation, upload your `manifest` file.
 . Log in with the user ID `admin` and the password credentials you set in the `inventory` file.
 
 
