AAP-22995: Reused logout procedure in VS Code chapter

--- a/lightspeed/assemblies/assembly_configuring-vscode-extension.adoc
+++ b/lightspeed/assemblies/assembly_configuring-vscode-extension.adoc
@@ -18,6 +18,7 @@ You can also use a custom, fine-tuned model if your organization administrator h
 include::modules/proc_install-vscode-extension.adoc[leveloffset=+1]
 include::modules/proc_configure-vscode-extension.adoc[leveloffset=+1]
 include::modules/proc_login-vscode-extension.adoc[leveloffset=+1]
+include::modules/proc_log-out-of-portal.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
