AAP-25608: Used Asciidoc button macro for consistency

--- a/lightspeed/modules/proc_create-oauth-app.adoc
+++ b/lightspeed/modules/proc_create-oauth-app.adoc
@@ -11,7 +11,7 @@ Use this procedure to create an OAuth application for your {LightspeedShortName}
 
 .Procedure
 . Log in to the {ControllerName} as an administrator.
-. Under *Administration*, click *Applications > Add*. 
+. Under *Administration*, click menu:Applications[Add].
 . Enter the following information:
 .. *Name*: Specify a unique name for your application.
 .. *Organization*: Select a preferred organization.
