--- a/lightspeed/modules/proc_install-aap-lightspeed-operator.adoc
+++ b/lightspeed/modules/proc_install-aap-lightspeed-operator.adoc
@@ -14,13 +14,13 @@ Use this procedure to install the {PlatformNameShort} operator on the {OCP}.
 . Log in to the {OCP} as an administrator.
 
 . Create a namespace:
-.. Go to *Administration → Namespaces*.
+.. Go to menu:Administration[Namespaces].
 .. Click *Create Namespace*.
 .. Enter a unique name for the namespace.
 .. Click *Create*. 
 
 . Install the operator:
-.. Go to *Operators → OperatorHub*.
+.. Go to menu:Operators[OperatorHub].
 .. Select the namespace where you want to install the {PlatformName} operator.
 .. Search for the {PlatformNameShort} operator. 
 .. From the search results, select the {PlatformNameShort} (provided by Red Hat) tile. 
