--- a/lightspeed/modules/proc_login-vscode-extension.adoc
+++ b/lightspeed/modules/proc_login-vscode-extension.adoc
@@ -13,7 +13,7 @@ After installing and configuring the VS Code extension, you can log in to the An
 .. From the navigation menu, click the *Ansible* icon. 
 .. Under Ansible Lightspeed Login, click *Connect*.
 ** Using the *Accounts* button:
-.. From the navigation menu, click *Accounts icon > Sign in with Ansible Lightspeed*.
+.. From the navigation menu, click the *Accounts* icon and select *Sign in with Ansible Lightspeed*.
 +
 [NOTE]
 +
@@ -24,7 +24,7 @@ This option is displayed when the VS Code extension is in an active state. The e
 . When prompted, click *Allow* to sign in. 
 . In the *Authorize Ansible Lightspeed for VS Code* window, click *Authorize*.
 . In the *Do you want Code to open the external website?* window, click *Open*. The link:https://c.ai.ansible.redhat.com/[Ansible Lightspeed portal login page] is displayed.
-. Click *Log in → Log in with Red Hat*.
+. Click menu:Log in[Log in with Red Hat].
 . Enter your Red Hat account username and password. 
 +
 On successful authentication, the login screen is displayed along with your username and your assigned user role. The VS code extension is now connected with Ansible Lightspeed service. 
