--- a/lightspeed/modules/proc_update-connection-secrets.adoc
+++ b/lightspeed/modules/proc_update-connection-secrets.adoc
@@ -13,12 +13,12 @@ After you have set up the {LightspeedShortName} on-premise deployment successful
 
 .Procedure
 . Go to the {OCP}. 
-. Select *Operators → Installed Operators*.
+. Select menu:Operators[Installed Operators].
 . From the *Projects* list, select the namespace where you installed the {LightspeedShortName} instance.
 . Locate and select the *Ansible Automation Platform (provided by Red Hat)* operator that you installed earlier.
 . Select the *Ansible Lightspeed* tab.
 . Find and select the instance you want to update.
-. Click *Actions > Edit AnsibleLightspeed*. The editor will switch to a text or YAML view.
+. Click menu:Actions[Edit AnsibleLightspeed]. The editor switches to a text or YAML view.
 . Scroll the text to find the `spec:` section.
 +
 image:update-connection-secrets.png[Setting to update the connection secrets])
