--- a/lightspeed/modules/proc_update-redirect-uri.adoc
+++ b/lightspeed/modules/proc_update-redirect-uri.adoc
@@ -12,12 +12,12 @@ When Ansible users log in or log out of Ansible Lightspeed service, the {Platfor
 .Procedure
 . Get the URL of the Ansible Lightspeed instance:
 .. Go to {OCP}.
-.. Select *Networking → Routes*.
+.. Select menu:Networking[Routes].
 .. Locate the {LightspeedShortName} instance that you created. 
 .. Copy the Location URL of the {LightspeedShortName} instance.
 
 . Update the *login* redirect URI:
-.. In the automation controller, go to *Administration → Applications*.
+.. In the automation controller, go to menu:Administration[Applications].
 .. Select the Lightspeed Oauth application that you created.
 .. In the *Redirect URIs* field of the Oauth application, enter the URL in the following format:
 +
