--- a/lightspeed/modules/proc_view-playbook-explanation.adoc
+++ b/lightspeed/modules/proc_view-playbook-explanation.adoc
@@ -19,7 +19,7 @@ You can request explanations for a newly created playbook as well as an existing
 . Use one of the following methods to view the playbook explanation:
 * *From an active playbook YAML file*:
 .. Place your cursor anywhere within the playbook file.
-.. Right-click > Select *Explain the playbook with Ansible Lightspeed*. 
+.. Right-click and select *Explain the playbook with Ansible Lightspeed*. 
 * *From the Ansible panel*:
 .. From the navigation menu, click the *Ansible* icon.
 .. Select *Explain the current playbook*.
