--- a/lightspeed/modules/proc_create-connection-secrets.adoc
+++ b/lightspeed/modules/proc_create-connection-secrets.adoc
@@ -15,11 +15,11 @@ For information about obtaining an API key and model ID from {ibmwatsonxcodeassi
 
 .Procedure
 . Go to the {OCP}. 
-. Select Select menu:Workloads[Secrets].
-. Click *Create → Key/value secret*.
+. Select menu:Workloads[Secrets].
+. Click menu:Create[Key/value secret].
 . From the *Projects* list, select the namespace that you created when you installed the {PlatformName} operator.
 . Create an *authorization secret* to connect to the {PlatformName}:
-.. Click *Create → Key/value secret*.
+.. Click menu:Create[Key/value secret].
 .. In *Secret name*, enter a unique name for the secret. For example, `auth-aiconnect`.
 .. Add the following keys and their associated values individually:
 +
@@ -57,7 +57,7 @@ The following image is an example of an authorization secret:
 image::aiconnect-auth-secret.png[{Example of an authorization secret]
 
 . Similarly, create a *model secret* to connect to an {ibmwatsonxcodeassistant} model:
-.. Click *Create → Key/value secret*.
+.. Click menu:Create[Key/value secret].
 .. In *Secret name*, enter a unique name for the secret. For example, `model-aiconnect`.
 .. Add the following keys and their associated values individually:
 +
