--- a/lightspeed/modules/proc_create-lightspeed-instance.adoc
+++ b/lightspeed/modules/proc_create-lightspeed-instance.adoc
@@ -12,10 +12,10 @@ Use this procedure to create and deploy a {LightspeedShortName} instance to your
 .Procedure
 
 . Go to {OCP}.
-. Select *Operators → Installed Operators*.
+. Select menu:Operators[Installed Operators].
 . From the *Projects* list, select the namespace where you want to install the {LightspeedShortName} instance and where you created the connection secrets.
 . Locate and select the *{PlatformNameShort} (provided by Red Hat)* operator that you installed earlier.
-. Select *All instances → Create new*.
+. Select menu:All instances[Create new].
 . From the *Create new* list, select the *Ansible Lightspeed* modal.
 . Ensure that you have selected *Form view* as the configuration mode. 
 . Provide the following information:
@@ -24,4 +24,4 @@ Use this procedure to create and deploy a {LightspeedShortName} instance to your
 .. *Secret where the model configuration can be found*: Select the model secret that you created to connect to {ibmwatsonxcodeassistant}.
 . Click *Create*. 
 +
-The {LightspeedShortName} instance takes a few minutes to deploy to your namespace. After the installation status is displayed as *Successful*, the Ansible Lightspeed portal URL is available under *Networking → Routes* in {OCP}.
+The {LightspeedShortName} instance takes a few minutes to deploy to your namespace. After the installation status is displayed as *Successful*, the Ansible Lightspeed portal URL is available under menu:Networking[Routes] in {OCP}.
