--- a/downstream/modules/platform/proc-controller-configure-jobs.adoc
+++ b/downstream/modules/platform/proc-controller-configure-jobs.adoc
@@ -73,7 +73,7 @@ Use a value of 0 to indicate that no timeout should be imposed.
 * *Maximum number of forks per job*: Saving a Job Template with more than this number of forks results in an error.
 +
 When set to 0, no limit is applied.
-* Container Run Options*: Only available in operator-based installations. 
+* *Container Run Options*: Only available in operator-based installations. 
 +
 List of options to pass to podman run example: `['--network', 'slirp4netns:enable_ipv6=true', '--log-level', 'debug']`.
 +
@@ -82,7 +82,7 @@ You can set the following options:
 * *Run Project Updates With Higher Verbosity*: Select to add the CLI `-vvv` flag to playbook runs of `project_update.yml` used for project updates
 * *Enable Role Download*: Select to allow roles to be dynamically downloaded from a `requirements.yml` file for SCM projects.
 * *Enable Collection(s) Download*: Select to allow collections to be dynamically downloaded from a `requirements.yml` file for SCM projects.
-*Follow symlinks*: Select to follow symbolic links when scanning for playbooks. 
+* *Follow symlinks*: Select to follow symbolic links when scanning for playbooks. 
 +
 Be aware that setting this to `True` can lead to infinite recursion if a link points to a parent directory of itself.
 * *Expose host paths for Container Groups*: Select to expose paths through hostPath for the Pods created by a Container Group. 
