--- a/downstream/titles/controller/controller-admin-guide/master.adoc
+++ b/downstream/titles/controller/controller-admin-guide/master.adoc
@@ -20,22 +20,23 @@ include::{Boilerplate}[]
 include::platform/assembly-ag-controller-start-stop-controller.adoc[leveloffset=+1]
 //Uses Settings menu. Which may be separate documentation.
 include::platform/assembly-ag-controller-config.adoc[leveloffset=+1]
+include::platform/assembly-controller-improving-performance.adoc[leveloffset=+1]
+include::platform/assembly-controller-management-jobs.adoc[leveloffset=+1]
 //Deprecated
 //include::platform/assembly-custom-inventory-scripts.adoc[leveloffset=+1]
 include::platform/assembly-inventory-file-importing.adoc[leveloffset=+1]
 //include::platform/assembly-multi-credential-assignment.adoc[leveloffset=+1]
-include::platform/assembly-controller-management-jobs.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-clustering.adoc[leveloffset=+1]
 //Removed to user Guide
 //include::platform/assembly-controller-instances.adoc[leveloffset=+1]
-include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
+//include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
 //Removed to User Guide
 //include::platform/assembly-controller-topology-viewer.adoc[leveloffset=+1]
 include::platform/assembly-controller-log-files.adoc[leveloffset=+1]
 //Lizzi's work: Logging removed at 2.5-next
 include::platform/assembly-controller-logging-aggregation.adoc[leveloffset=+1]
 include::platform/assembly-controller-metrics.adoc[leveloffset=+1]
-include::platform/assembly-controller-improving-performance.adoc[leveloffset=+1]
+include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-secret-handling.adoc[leveloffset=+1]
 include::platform/assembly-ag-controller-security-best-practices.adoc[leveloffset=+1]
 include::platform/assembly-controller-awx-manage-utility.adoc[leveloffset=+1]
