--- a/downstream/titles/controller/controller-user-guide/master.adoc
+++ b/downstream/titles/controller/controller-user-guide/master.adoc
@@ -47,6 +47,7 @@ include::platform/assembly-controller-inventories.adoc[leveloffset=+1]
 include::platform/assembly-controller-inventory-templates.adoc[leveloffset=+1]
 //Infrastructure-Instance Groups
 include::platform/assembly-ug-controller-instance-groups.adoc[leveloffset=+1]
+include::platform/assembly-ag-instance-and-container-groups.adoc[leveloffset=+1]
 //Infrastructure-Instances
 include::platform/assembly-controller-instances.adoc[leveloffset=+1]
 //Infrastructure-Execution environments
@@ -59,7 +60,8 @@ include::platform/assembly-controller-ee-setup-reference.adoc[leveloffset=+1]
 //Possibly in Donna's credentials document
 //include::platform/assembly-controller-credentials.adoc[leveloffset=+1]
 //include::platform/assembly-controller-custom-credentials.adoc[leveloffset=+1]
-include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
+//Moved to admin guide
+//include::platform/assembly-controller-secret-management.adoc[leveloffset=+1]
 //include::platform/assembly-controller-applications.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-work-with-webhooks.adoc[leveloffset=+1]
 include::platform/assembly-ug-controller-notifications.adoc[leveloffset=+1]
