--- a/downstream/assemblies/platform/assembly-ag-controller-clustering.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-clustering.adoc
@@ -13,11 +13,11 @@ Load balancing is optional, and it is entirely possible to have ingress on one o
 
 Each instance must be able to join the {ControllerName} cluster and expand its ability to run jobs. 
 This is a simple system where jobs can run anywhere rather than be directed on where to run. 
-Also, you can group clustered instances into different pools or queues, called xref:controller-instance-groups[Instance groups].
+Also, you can group clustered instances into different pools or queues, called link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-instance-groups[Instance groups] in _{ControllerUG}_.
 
 {PlatformNameShort} supports container-based clusters by using Kubernetes, meaning you can install new {ControllerName} instances on this platform without any variation or diversion in functionality. 
 You can create instance groups to point to a Kubernetes container. 
-For more information, see the xref:controller-instance-and-container-groups[Container and instance groups] section.
+For more information, see the link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-instance-and-container-groups[Container and instance groups] in _{ControllerUG}_.
 
 .Supported operating systems
 
