--- a/downstream/modules/platform/con-controller-overview-details.adoc
+++ b/downstream/modules/platform/con-controller-overview-details.adoc
@@ -48,7 +48,7 @@ For more information, see xref:ref-projects-galaxy-support[Ansible Galaxy Suppor
 = Inventory support for OpenStack
 Dynamic inventory support is available for OpenStack. With this you can target any of the virtual machines or images running in your OpenStack cloud.
 
-For more information, see [OpenStack credential type].
+For more information, see TBD[OpenStack credential type].
 
 = Remote command execution
 Use remote command execution to perform a simple tasks, such as adding a single user, updating a single security vulnerability, or restarting a failing service.
