Revising content of Controller Guides
Corrected links to ControllerAG

Sanity check Controller User Guide for 2.5 release

https://issues.redhat.com/browse/AAP-26370

--- a/downstream/assemblies/platform/assembly-controller-inventories.adoc
+++ b/downstream/assemblies/platform/assembly-controller-inventories.adoc
@@ -35,7 +35,7 @@ Groups may be sourced manually, by entering host names into {ControllerName}, or
 ====
 If you have a custom dynamic inventory script, or a cloud provider that is not yet supported natively in {ControllerName}, you can also import that into {ControllerName}.
 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-inventory-file-importing[Inventory file importing] in the _{ControllerAG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-inventory-file-importing[Inventory file importing] in _{ControllerAG}_.
 ====
 
 From the navigation panel, select {MenuInfrastructureInventories}.
