--- a/downstream/modules/platform/proc-controller-create-instance-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-instance-group.adoc
@@ -26,7 +26,7 @@ If you do not specify values, then the *Policy instance minimum* and *Policy ins
 [NOTE]
 ====
 The default value of 0 for *Max concurrent jobs* and *Max forks* denotes no limit.
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-instance-and-container-groups#controller-instance-group-capacity[Instance group capacity limits] in the _{ControllerAG}_.
+For more information, see xref:controller-instance-group-capacity[Instance group capacity limits].
 ====
 
 . Click btn:[Create Instance Group], or, if you have edited an existing Instance Group click btn:[Save Instance Group]
